--- a/app/sass/_libs.scss
+++ b/app/sass/_libs.scss
@@ -1,3 +1,4 @@
 @import "../bootstrap-4.0.0-alpha.6/scss/bootstrap.scss";
 @import "../libs/css/font-awesome.min";
 @import "../libs/owl.carousel/dist/assets/owl.carousel.min";
+@import "../libs/animate.css/animate.min";
