--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -102,7 +102,8 @@ header {
 			width: 100%;
 			z-index: 2;
 			opacity: 1;
-			transition: all .4s;
+			//transition scrolling
+			transition: all .3s;
 		}
 		
 		.logo img {
@@ -762,7 +763,7 @@ main.main-details {
 		.table-services {
 			border: 1px solid $border-color;
 			margin-top: 50px;
-			.col-4 {
+			.col-lg-4 {
 				text-align: center;
 				min-height: 200px;
 				position: relative;
@@ -777,7 +778,7 @@ main.main-details {
 					left: 40%;
 				}
 			}
-			.col-4:nth-of-type(odd) {
+			.col-lg-4:nth-of-type(odd) {
 				background-color: $main-color;
 				color: $white;
 			}
@@ -792,6 +793,33 @@ main.main-details {
 		}
 		.btn {
 			@include button-main;
+		}
+	}
+	section.table-mobile {
+		display: none;
+		h4 {
+			margin-top: 30px;
+			color: $main-color;
+		}
+		span {
+			margin-top: 17px;
+		}
+		.price {
+			color: $number-color;
+			font-size: 1.2rem;
+		}
+		.fa {
+			color: $white;
+			font-size: 1.3rem;
+			border-radius: 50%;
+			background-color: #3a945b;
+		}
+		.btn {
+			@include button-main;
+			width: 100px;
+			height: 40px;
+			font-size: 1rem;
+			margin-top: 15px;
 		}
 	}
 }  
