--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -651,12 +651,44 @@ footer {
 .mfp-wrap {
 	 color: $white;
 	 padding-top: 3em !important;
-	 opacity: 0.9;
+	 opacity: 1;
+	form {
+		span {
+			position: relative;
+			top: 36px;
+			padding: 0;
+		}
+		input {
+			margin-top: 20px;
+		}
+		input[type="text"],textarea {
+			border: none;
+			border-bottom: 2px solid ghostwhite;
+			background-color: transparent !important;
+			font-size: 1.1rem;
+			overflow: hidden;
+			padding: 0;
+			width: 100%;
+			color: navajowhite;
+			&:focus {
+				outline: none !important;
+				&::placeholder {
+					opacity: 0;
+					transition: all 0.5s ease;
+				}
+			}
+			&::placeholder {
+				color: antiquewhite;
+				font-size: 1rem;
+			}
+		}
+	}
 	 .btn {
 	 	@include button-main;
 	 	background-color: $white;
 	 	color: $border-color;
 	 	border: none;
+		 border-radius: 7%;
 	 	width: 150px;
 		height: 45px;
 	 }
