article.html dev start

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -877,8 +877,6 @@ body.blog {
 	.sidebar {
 		background-color: black;
 		padding: 0;
-		margin-bottom: 60px;
-
 		.left-sidebar {
 			margin-top: 70px;
 			width: 100%;
@@ -913,6 +911,7 @@ body.blog {
 	   }
 		nav {
 			margin-bottom: 40px;
+			margin-top: 40px;
 		}
 	}
 }
