--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -915,4 +915,11 @@ body.blog {
 		}
 	}
 }
+//article.html
+main.main-blog {
+	h2 {
+		margin-top: 60px;
+		margin-bottom: 40px;
+	}
+}
 @import "media";// Всегда в конце
